Fixed text buttons incorrect aligning of input-dropdown mixin

--- a/src/components/button/__mean-oval/button__mean-oval.scss
+++ b/src/components/button/__mean-oval/button__mean-oval.scss
@@ -96,7 +96,6 @@
   }
 
   &_text {
-    width: max-content;
     white-space: nowrap;
     transition: opacity .5s ease;
 
